data/derived/fa15/progs/unify/prog2503.ml.out
Characters 203-207:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list * 'b list
       but an expression was expected of type int list
